# x-function

./: .gitmodules  README.md
policy/: .gitignore  Cargo.toml  README.md  hypervisor.toml  rust-toolchain  rustfmt.toml
policy/binaries/hypervisor/: Cargo.toml
policy/binaries/hypervisor/data/: onchain_history.json  portfolio.json  price_feed.json  sentiment.json
policy/binaries/hypervisor/src/: config.rs  error.rs  lib.rs  main.rs  server.rs  types.rs
policy/binaries/hypervisor/src/agent/: compliance.rs  crypto_agent.rs  mod.rs  policy_registry.rs  quote_utils.rs  tools.rs  types.rs
policy/binaries/hypervisor/src/api/: agent.rs  encrypt.rs  mod.rs  openai.rs  ping.rs
policy/binaries/hypervisor/src/utils/: attest.rs  commitment_openai.rs  crypto.rs  hasher.rs  mod.rs
policy/crates/attest/: Cargo.toml
policy/crates/attest/src/: errors.rs  lib.rs  types.rs
policy/crates/attest/src/provider/: coco.rs  ioctl.rs  mod.rs
policy/examples/: crypto_agent_client.py  keygen_secp256k1.py
policy/outputs/: results_example.txt
serverless/backend/: GoogleStyle.xml  LICENSE  NOTICE
serverless/backend/hive-vendor-spring-boot-starter/: pom.xml
serverless/backend/k8s/: x402-function-hive-backend-secret.yaml
serverless/backend/vendor-spi/: README.md
serverless/backend/x402-function-parent/x402-function-bom/: pom.xml
serverless/backend/x402-function-parent/x402-function-spring-boot-starter/src/main/resources/: application.properties
serverless/backend/x402-function-rest-demo/: README.md  pom.xml
serverless/backend/x402-function-rest-demo/src/main/resources/: application-example.properties  application.properties
serverless/backend/x402-spring-boot-starter/: README.md  pom.xml
serverless/backend/x402-spring-boot-starter/src/main/java/ai/saharalabs/x402/configuration/: X402Configuration.java  X402InterceptorAutoConfiguration.java
x402/: Dockerfile  README.md
x402/hive-vendor-spring-boot-starter/src/main/resources/: application.properties
x402/k8s/: x402-function-backend-configmap.yaml  x402-function-backend-service.yaml  x402-function-backend-statefulset.yaml
x402/vendor-spi/: pom.xml
x402/x402-function-parent/: pom.xml
x402/x402-function-parent/x402-function-api/: pom.xml
x402/x402-function-parent/x402-function-spring-boot-starter/: README.md  pom.xml
x402/x402-spring-boot-starter/src/main/java/ai/saharalabs/x402/model/: Kind.java  PaymentPayload.java  PaymentRequirements.java  SettlementResponseHeader.java  VerificationResponse.java
x402/x402-spring-boot-starter/src/test/java/ai/saharalabs/x402/: X402SpringBootStarterTestApplication.java
x402/x402-spring-boot-starter/src/test/java/ai/saharalabs/x402/configuration/: X402InterceptorTestConfig.java
x402/x402-spring-boot-starter/src/test/java/ai/saharalabs/x402/test/: BodyPriceCalculator.java  ParamPriceCalculator.java  TestPriceCalculator.java
x402/x402-spring-boot-starter/src/test/resources/: application.properties
(+31 files in other folders)
