[package]
name = "hypervisor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hypervisor"
path = "src/main.rs"

[lib]
name = "hypervisor"
path = "src/lib.rs"

[features]

[dependencies]
attest = { path = "../../crates/attest" }

aes-gcm-siv.workspace = true
anyhow.workspace = true
axum.workspace = true
blake3.workspace = true
chrono.workspace = true
clap.workspace = true
const-hex.workspace = true
dashmap.workspace = true
k256.workspace = true
hkdf.workspace = true
rand.workspace = true
reqwest.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true


[dev-dependencies]
axum-test.workspace = true
test-log.workspace = true
