[package]
name = "attest"
version = "0.1.0"
edition = "2021"

[features]
default = []
ioctl = []

[dependencies]
dcap-rs.workspace = true
k256.workspace = true
thiserror.workspace = true
tracing.workspace = true

tdx-attestation-sdk = { package = "tdx", git = "https://github.com/automata-network/tdx-attestation-sdk", rev = "70b9074", default-features = false, features = ["configfs"] }
